# escl-scan

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
escl-scan/: Cargo.toml  README.md
escl-scan-cli/: Cargo.toml  README.md
escl-scan-cli/src/: main.rs
escl-scan/src/: lib.rs  scanner.rs  scannererror.rs  scannerfinder.rs  structs.rs
reference/: Brother_MFC-2710DW_Capabilities.xml  Brother_MFC-2710DW_ScannerStatus.xml
