[package]
name = "escl-scan-cli"
version = "0.1.4"
authors = ["ElXreno <elxreno@gmail.com>", "Marcel Kummer <tanuva@posteo.de>"]
repository = "https://github.com/tanuva/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["command-line-utilities"]
description = """
CLI for escl-scan
"""
edition = "2021"

[dependencies]
clap = { version = "4.4.*", features = ["cargo"] }
env_logger = "0.9.*"
log = "0.4.*"
scan = { package="escl-scan", path="../escl-scan" }
