[package]
name = "escl-scan-cli"
description = """
Scans documents from an eSCL-speaking scanner on the network. The first
discovered scanner will be used if neither --name nor --host are provided."""
version = "0.3.0"
authors = ["ElXreno <elxreno@gmail.com>", "Marcel Kummer <tanuva@posteo.de>"]
repository = "https://github.com/tanuva/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.4.*", features = ["derive"] }
env_logger = "0.10.*"
log = "0.4.*"
scan = { package="escl-scan", path="../escl-scan" }
