[package]
name = "escl-scan"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/escl-scan"
version = "0.1.4"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["api-bindings"]
description = """
A library for scanning documents over LAN or Wi-Fi using eSCL protocol.
"""
edition = "2021"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
