[package]
name = "escl-scan"
version = "0.1.4"
authors = ["ElXreno <elxreno@gmail.com>", "Marcel Kummer <tanuva@posteo.de>"]
repository = "https://github.com/tanuva/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["api-bindings"]
description = """
A library for scanning documents over LAN or Wi-Fi using the eSCL protocol.
"""
edition = "2021"

[dependencies]
log = "0.4.*"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
zeroconf = "0.12.*"
